# -Drogon-Vue-bbs

./: README.md  init.sql
backend/: CMakeLists.txt  config.json  main.cc
backend/controllers/: AdminController.cc  AdminController.h  AuthController.cc  AuthController.h  BoardController.cc  BoardController.h  BrowseHistoryController.cc  BrowseHistoryController.h  FollowController.cc  FollowController.h  LikeController.cc  LikeController.h  NotifWSController.cc  NotifWSController.h  NotificationController.cc  NotificationController.h  PostController.cc  PostController.h  ReplyController.cc  ReplyController.h  UserController.cc  UserController.h
backend/filters/: AdminFilter.cc  AdminFilter.h  TokenFilter.cc  TokenFilter.h  TokenHelper.cc  TokenHelper.h
backend/test/: CMakeLists.txt
backend/utils/: BcryptUtils.cc  BcryptUtils.h  JwtUtils.cc  JwtUtils.h  ResponseUtil.cc  ResponseUtil.h
frontend/: package-lock.json  package.json  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts
frontend/src/: App.vue  env.d.ts  main.ts
frontend/src/api/: admin.ts  auth.ts  board.ts  browse.ts  follow.ts  like.ts  notification.ts  post.ts  reply.ts  request.ts  user.ts
frontend/src/components/: NavBar.vue
frontend/src/router/: index.ts
frontend/src/stores/: notification.ts  user.ts
frontend/src/views/: Board.vue  FollowList.vue  Home.vue  LoginRegister.vue  MyBrowse.vue  NotificationList.vue  PostDetail.vue  Profile.vue  ProfileEdit.vue  UserProfile.vue
frontend/src/views/Admin/: BoardManage.vue  PostManage.vue
